--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -27,7 +27,6 @@
 <!-- COVER -->
 <div class="cover" id="cover">
    <div class="content">
-      <img src="{% static '/images/covers/cover-7.png' %}" class="cover-img" alt="cover-1">   
       <div class="text">
       </div>
    </div>
@@ -63,7 +62,7 @@
    <div class="border"></div>
 </div> -->
 
-<!-- <div id="productScrollTo" class="scroll-to" style="height: 60px; width: 100%"></div>
+<div id="productScrollTo" class="scroll-to" style="height: 60px; width: 100%"></div>
 <div class="product-section" id="productHomePage">
    <h1 class="heading">Priser</h1>
    <div class="flex">
@@ -77,7 +76,7 @@
       {% endfor %}
    </div>
    <div class="border"></div>
-</div> -->
+</div>
 <!-- <div id="proccessScrollTo" class="scroll-to" style="height: 60px; width: 100%;"></div>
 <div class="proccess" id="info">
    <h1 class="heading">Så enkelt er det</h1>
@@ -112,7 +111,7 @@
 </div> -->
 
 
-<!-- <div id="contactScrollTo" class="scroll-to" style="height: 60px; width: 100%;"></div>
+<div id="contactScrollTo" class="scroll-to" style="height: 60px; width: 100%;"></div>
 <div class="contact-us" id="contactUs">
    <h1 class="heading">Trenger du extra hjelp?</h1>
    <p>Kontakter oss under</p>
@@ -133,5 +132,5 @@
          <button class="hover" type="submit" name="contact" value="contact">Send</button>
       </div>
    </form>
-</div> -->
+</div>
 {% endblock %}
