--- a/static/scss/base.css
+++ b/static/scss/base.css
@@ -8,7 +8,7 @@ html, body {
 }
 
 .scroll-to {
-  background: white;
+  background: transparent;
 }
 
 .hover:hover {
@@ -133,7 +133,7 @@ html, body {
 }
 
 .product-section {
-  background: white;
+  background: transparent;
   text-align: center;
   width: 100%;
   height: auto;
@@ -146,22 +146,16 @@ html, body {
   background: #646464;
   height: 2px;
   width: 65%;
-  margin: 20px auto;
-  -webkit-transform: translateY(20px);
-          transform: translateY(20px);
-}
-
-.product-section.active .product-card {
-  opacity: 1;
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
+  margin: 60px auto;
+  -webkit-transform: translateY(30px);
+          transform: translateY(30px);
 }
 
 .product-section h1.heading {
   width: 100%;
   text-transform: uppercase;
   font-family: 'Sniglet', cursive;
-  color: #142c78;
+  color: white;
   font-weight: 700;
   font-size: 26px;
 }
@@ -169,16 +163,18 @@ html, body {
 .product-section .product-card {
   margin: 30px auto;
   border-radius: 5%;
-  background: linear-gradient(135deg, #3c54a0, #7996f8);
+  background: transparent;
+  -webkit-backdrop-filter: blur(100px);
+          backdrop-filter: blur(100px);
   padding: 5px;
-  opacity: 0;
+  opacity: 1;
   -webkit-transition: all ease-in .5s;
   transition: all ease-in .5s;
   -webkit-transform: translateY(40px);
           transform: translateY(40px);
   max-width: 320px;
-  -webkit-box-shadow: 0px 3px 7px #323232;
-          box-shadow: 0px 3px 7px #323232;
+  -webkit-box-shadow: 0px 0px 0px 3px white;
+          box-shadow: 0px 0px 0px 3px white;
 }
 
 .product-section .product-card .text .product-name {
@@ -414,75 +410,8 @@ html, body {
   font-family: 'Sniglet', cursive;
 }
 
-.hosting {
-  background: white;
-  width: 100%;
-  height: auto;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  text-align: center;
-}
-
-.hosting h1.heading {
-  width: 100%;
-  text-transform: uppercase;
-  font-family: 'Sniglet', cursive;
-  color: #142c78;
-  font-weight: 700;
-  font-size: 26px;
-}
-
-.hosting p {
-  font-size: 18px;
-  text-transform: uppercase;
-  font-family: 'Sniglet', cursive;
-  color: #3c54a0;
-}
-
-.hosting .home-order {
-  margin-top: 20px;
-  border-radius: 4px;
-  color: #1e1e1e;
-  width: 100px;
-  font-size: 15px;
-  padding: 5px;
-  -webkit-transition: all .2s ease-in-out;
-  transition: all .2s ease-in-out;
-  color: white;
-  border: 2px solid transparent;
-  outline: none;
-  background: linear-gradient(135deg, #3c54a0, #7996f8);
-  -webkit-box-shadow: 1px 2px 2px #3c54a0;
-          box-shadow: 1px 2px 2px #3c54a0;
-}
-
-.hosting .home-order.hover:hover {
-  background: white;
-  color: #3c54a0;
-  border: 2px solid #3c54a0;
-  -webkit-box-shadow: none;
-          box-shadow: none;
-}
-
-.hosting .home-order.hover:active {
-  background: white;
-  color: #3c54a0;
-  border: 2px solid #3c54a0;
-  -webkit-box-shadow: none;
-          box-shadow: none;
-}
-
-.hosting .border {
-  background: #646464;
-  height: 2px;
-  width: 65%;
-  margin: 20px auto;
-  -webkit-transform: translateY(20px);
-          transform: translateY(20px);
-}
-
 .contact-us {
-  background: white;
+  background: transparent;
   width: 100%;
   height: auto;
   padding-top: 20px;
@@ -498,7 +427,7 @@ html, body {
   width: 100%;
   text-transform: uppercase;
   font-family: 'Sniglet', cursive;
-  color: #142c78;
+  color: white;
   font-weight: 700;
   font-size: 26px;
 }
@@ -507,7 +436,8 @@ html, body {
   font-size: 18px;
   text-transform: uppercase;
   font-family: 'Sniglet', cursive;
-  color: #3c54a0;
+  color: white;
+  opacity: 0.8;
 }
 
 .contact-us form {
@@ -515,10 +445,12 @@ html, body {
   padding: 10px;
   margin: 15px;
   margin-top: 0;
-  opacity: 0;
+  opacity: 1;
   -webkit-transition: all ease-in .5s;
   transition: all ease-in .5s;
   position: relative;
+  background: white;
+  border-radius: 4px;
 }
 
 .contact-us form .form-tag-navn {
@@ -581,19 +513,19 @@ html, body {
 }
 
 .contact-us form .form-actions {
-  margin-top: 15px;
+  margin-top: 25px;
 }
 
 .contact-us form .form-actions button {
   border-radius: 4px;
   width: 200px;
   font-size: 16px;
-  padding: 5px;
+  padding: 10px;
   -webkit-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
   color: white;
   outline: none;
-  background: linear-gradient(135deg, #3c54a0, #7996f8);
+  background: linear-gradient(135deg, #5a7ef5, #607bd3);
   -webkit-box-shadow: 1.5px 3px 2px #3c54a0;
           box-shadow: 1.5px 3px 2px #3c54a0;
   border: 2px solid transparent;
