--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -15,7 +15,7 @@ html, body {
   display: block;
 }
 .scroll-to{
-  background: white;
+  background: transparent;
 }
 .hover{
   &:hover{
@@ -122,7 +122,7 @@ html, body {
   }
 }
 .product-section{
-  background: white;
+  background: transparent;
   text-align: center;
   width: 100%;
   height: auto;
@@ -133,21 +133,15 @@ html, body {
     background: rgb(100, 100, 100);
     height: 2px;
     width: 65%;
-    margin: 20px auto;
-    transform: translateY(20px);
-  }
-  &.active{
-    .product-card{
-      opacity: 1;
-      transform: translateY(0);
-    }
+    margin: 60px auto;
+    transform: translateY(30px);
   }
   h1{
     &.heading{
       width: 100%;
       text-transform: uppercase;
       font-family: 'Sniglet', cursive;
-      color: rgb(20, 44, 120);
+      color: white;
       font-weight: 700;
       font-size: 26px;
     }
@@ -155,13 +149,15 @@ html, body {
   .product-card{
     margin: 30px auto;
     border-radius: 5%;
-    background: linear-gradient(135deg,rgb(60, 84, 160), #7996f8);    
+    // background: linear-gradient(135deg,rgb(60, 84, 160), #7996f8); 
+    background: transparent;   
+    backdrop-filter: blur(100px);   
     padding: 5px;
-    opacity: 0;
+    opacity: 1;
     transition: all ease-in .5s;
     transform: translateY(40px);
     max-width: 320px;
-    box-shadow: 0px 3px 7px rgb(50, 50, 50);
+    box-shadow: 0px 0px 0px 3px white;
     .text{
       .product-name{
         font-size: 22px;
@@ -356,67 +352,8 @@ html, body {
     }
   }
 }
-.hosting{
-  background: white;
-  width: 100%;
-  height: auto;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  text-align: center;
-  h1{
-    &.heading{
-      width: 100%;
-      text-transform: uppercase;
-      font-family: 'Sniglet', cursive;
-      color: rgb(20, 44, 120);
-      font-weight: 700;
-      font-size: 26px;
-    }
-  }
-  p{
-    font-size: 18px;
-    text-transform: uppercase;
-    font-family: 'Sniglet', cursive;
-    color: rgb(60, 84, 160);
-  }
-  .home-order{
-    margin-top: 20px;
-    border-radius: 4px;
-    color: rgb(30, 30, 30);
-    width: 100px;
-    font-size: 15px;
-    padding: 5px;
-    transition: all .2s ease-in-out;
-    color: white;
-    border: 2px solid transparent;
-    outline: none;
-    background: linear-gradient(135deg,rgb(60, 84, 160), #7996f8);    
-    box-shadow: 1px 2px 2px rgb(60, 84, 160);
-  &.hover{
-      &:hover{
-        background: white;
-        color: rgb(60, 84, 160);
-        border: 2px solid rgb(60, 84, 160);
-        box-shadow: none;
-      }
-      &:active{
-        background: white;
-        color: rgb(60, 84, 160);
-        border: 2px solid rgb(60, 84, 160);
-        box-shadow: none;
-      }
-    }
-  }
-  .border{
-    background: rgb(100, 100, 100);
-    height: 2px;
-    width: 65%;
-    margin: 20px auto;
-    transform: translateY(20px);
-  }
-}
 .contact-us{
-  background: white;
+  background: transparent;
   width: 100%;
   height: auto;
   padding-top: 20px;
@@ -432,7 +369,7 @@ html, body {
       width: 100%;
       text-transform: uppercase;
       font-family: 'Sniglet', cursive;
-      color: rgb(20, 44, 120);
+      color: white;
       font-weight: 700;
       font-size: 26px;
     }
@@ -441,16 +378,19 @@ html, body {
     font-size: 18px;
     text-transform: uppercase;
     font-family: 'Sniglet', cursive;
-    color: rgb(60, 84, 160);
+    color: white;
+    opacity: 0.8;
   }
   form{
     text-align: left;
     padding: 10px;
     margin: 15px;
     margin-top: 0;
-    opacity: 0;
+    opacity: 1;
     transition: all ease-in .5s;
     position: relative;
+    background: white;
+    border-radius: 4px;
     .form-tag-navn{
       font-size: 15px;
       color: rgb(60, 84, 160);
@@ -500,16 +440,16 @@ html, body {
       font-size: 15px;      
     }
     .form-actions{
-      margin-top: 15px;
+      margin-top: 25px;
       button{
         border-radius: 4px;
         width: 200px;
         font-size: 16px;
-        padding: 5px;
+        padding: 10px;
         transition: all .2s ease-in-out;
         color: white;
         outline: none;
-        background: linear-gradient(135deg,rgb(60, 84, 160), #7996f8);    
+        background: linear-gradient(135deg,#5a7ef5, #607bd3);  
         box-shadow: 1.5px 3px 2px rgb(60, 84, 160);
         border: 2px solid transparent;  
         &:hover{
