--- a/static/scss/store/nav.css
+++ b/static/scss/store/nav.css
@@ -71,16 +71,19 @@
 #navbar .hamburger.click {
   background: -webkit-gradient(linear, left bottom, left top, from(#e6e6e6), color-stop(whitesmoke), to(#e6e6e6));
   background: linear-gradient(to top, #e6e6e6, whitesmoke, #e6e6e6);
-  -webkit-animation-name: hamburger-scale;
-          animation-name: hamburger-scale;
-  -webkit-animation-duration: .1s;
-          animation-duration: .1s;
 }
 
 #navbar .hamburger.click .center-span {
   opacity: 0;
   -webkit-transform: translateX(-16px);
           transform: translateX(-16px);
+}
+
+#navbar .hamburger:active {
+  -webkit-animation-name: hamburger-scale;
+          animation-name: hamburger-scale;
+  -webkit-animation-duration: .1s;
+          animation-duration: .1s;
 }
 
 @-webkit-keyframes hamburger-scale {
@@ -227,16 +230,16 @@
   font-size: 22px;
 }
 
-#navbar .my-account-icon.click {
-  background: -webkit-gradient(linear, left bottom, left top, from(#e6e6e6), color-stop(whitesmoke), to(#e6e6e6));
-  background: linear-gradient(to top, #e6e6e6, whitesmoke, #e6e6e6);
-}
-
-#navbar .my-account-icon.click i {
+#navbar .my-account-icon i:active {
   -webkit-animation-name: user-scale;
           animation-name: user-scale;
   -webkit-animation-duration: .1s;
           animation-duration: .1s;
+}
+
+#navbar .my-account-icon.click {
+  background: -webkit-gradient(linear, left bottom, left top, from(#e6e6e6), color-stop(whitesmoke), to(#e6e6e6));
+  background: linear-gradient(to top, #e6e6e6, whitesmoke, #e6e6e6);
 }
 
 @-webkit-keyframes user-scale {
