--- a/apps/core/templates/core/nav.html
+++ b/apps/core/templates/core/nav.html
@@ -28,6 +28,7 @@
             <span class="upper-span"></span>
             <span class="center-span"></span>
             <span class="lower-span"></span>
+            <i class="fas fa-times close-hamburger"></i>
         </div>
         <!-- SIDEBAR CIRCLE BACKGROUND -->
         <div class="circle" id="sidebarCircleBackground"></div>
