--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -33,7 +33,7 @@
 <body ontouchstart="">
     {% include 'core/nav.html' %}
 
-    <!-- <div id="backToTop" onclick="backToTop()"><i class="fas fa-location-arrow" id="backToTopIcon"></i></div> -->
+    <div id="backToTop" onclick="backToTop()"><i class="fas fa-location-arrow" id="backToTopIcon"></i></div>
     <style type="text/css">
         #navBarSpace{
             width: 100%;
