--- a/static/scss/base.css
+++ b/static/scss/base.css
@@ -28,108 +28,56 @@ html, body {
 }
 
 .services {
-  background: white;
+  background: transparent;
   width: 100%;
   height: auto;
-  padding: 15px;
-  padding-top: 0;
-  text-align: center;
   position: relative;
   -webkit-transition: all ease-in .5s;
   transition: all ease-in .5s;
-}
-
-.services.active .icon {
-  opacity: 1;
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
+  padding-bottom: 15px;
 }
 
 .services h1.heading {
+  text-align: center;
   width: 100%;
   text-transform: uppercase;
   font-family: 'Sniglet', cursive;
-  color: #142c78;
+  color: white;
   font-weight: 700;
   font-size: 26px;
-  margin-bottom: 20px;
+  padding-bottom: 60px;
 }
 
-.services h1#servicesFirstText {
-  font-weight: unset;
-}
-
-.services .border {
-  background: #646464;
-  height: 2px;
-  width: 65%;
-  margin: 20px auto;
-  -webkit-transform: translateY(20px);
-          transform: translateY(20px);
-}
-
-.services .icon {
-  margin-bottom: 15px;
-  width: 45%;
+.services .service-1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
   height: auto;
-  padding: 5px;
-  display: inline-table;
   position: relative;
-  opacity: 0;
-  -webkit-transition: all ease-in .5s;
-  transition: all ease-in .5s;
-  -webkit-transform: translateY(40px);
-          transform: translateY(40px);
 }
 
-.services .icon i {
-  margin: 30px;
-  margin-bottom: -15px;
-  padding: 20px;
-  color: black;
-  font-size: 50px;
-  border-radius: 8px;
-  color: #3c54a0;
-  -webkit-box-shadow: 2px 2px 2px #3c54a0;
-          box-shadow: 2px 2px 2px #3c54a0;
+.services .service-1 .colum-1 {
+  width: 50%;
+  text-align: center;
 }
 
-.services .icon h1 {
-  font-family: 'Sniglet', cursive;
-  font-size: 16px;
-  color: black;
-  padding: 5px;
-  margin-bottom: 7px;
-  margin-top: 25px;
+.services .service-1 .colum-1 img {
+  width: 120px;
+  height: auto;
 }
 
-.services .icon p {
-  display: none;
-  font-size: 14px;
-  opacity: 0.9;
+.services .service-1 .colum-2 {
+  width: 50%;
 }
 
-.services .icon button {
-  margin-top: 10px;
-  border-radius: 4px;
-  width: 100px;
-  font-size: 15px;
-  padding: 5px;
-  -webkit-transition: all .2s ease-in-out;
-  transition: all .2s ease-in-out;
+.services .service-1 .colum-2 h1 {
+  text-align: center;
+  text-transform: uppercase;
   color: white;
-  outline: none;
-  background: linear-gradient(135deg, #3c54a0, #7996f8);
-  -webkit-box-shadow: 1px 2px 2px #3c54a0;
-          box-shadow: 1px 2px 2px #3c54a0;
-  border: 2px solid transparent;
-  outline: none;
-}
-
-.services .icon button.active {
-  background: white;
-  border: 2px solid #3c54a0;
-  color: #3c54a0;
+  font-family: 'Sniglet', cursive;
+  font-size: 23px;
+  font-weight: 600;
 }
 
 .product-section {
@@ -449,14 +397,14 @@ html, body {
   -webkit-transition: all ease-in .5s;
   transition: all ease-in .5s;
   position: relative;
-  background: white;
+  background: #e8edff;
   border-radius: 4px;
 }
 
 .contact-us form .form-tag-navn {
   font-size: 15px;
-  color: #3c54a0;
-  background: white;
+  color: #304792;
+  background: #e8edff;
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
@@ -464,12 +412,13 @@ html, body {
   position: absolute;
   left: 20px;
   top: 24px;
+  border-radius: 5px;
 }
 
 .contact-us form .form-tag-email {
   font-size: 15px;
-  color: #3c54a0;
-  background: white;
+  color: #304792;
+  background: #e8edff;
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
@@ -477,12 +426,13 @@ html, body {
   position: absolute;
   left: 20px;
   top: 88px;
+  border-radius: 5px;
 }
 
 .contact-us form .form-tag-message {
   font-size: 15px;
-  color: #3c54a0;
-  background: white;
+  color: #304792;
+  background: #e8edff;
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
@@ -490,6 +440,7 @@ html, body {
   position: absolute;
   left: 20px;
   top: 152px;
+  border-radius: 5px;
 }
 
 .contact-us form textarea {
