--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -32,91 +32,46 @@ html, body {
   }
 }
 .services{
-  background: white;
+  background: transparent;
   width: 100%;
   height: auto;
-  padding: 15px;
-  padding-top: 0;
-  text-align: center;
   position: relative;
   transition: all ease-in .5s;
-  &.active{
-    .icon{
-      opacity: 1;
-      transform: translateY(0);
-    }
-  }
+  padding-bottom: 15px;
   h1{
     &.heading{
+      text-align: center;
       width: 100%;
       text-transform: uppercase;
       font-family: 'Sniglet', cursive;
-      color: rgb(20, 44, 120);
+      color: white;
       font-weight: 700;
       font-size: 26px;
-      margin-bottom: 20px;
-    }
-     &#servicesFirstText{
-      font-weight: unset;
+      padding-bottom: 60px;
     }
   }
-  .border{
-    background: rgb(100, 100, 100);
-    height: 2px;
-    width: 65%;
-    margin: 20px auto;
-    transform: translateY(20px);
-  }
-  .icon{
-    margin-bottom: 15px;
-    width: 45%;
+  .service-1{
+    display: flex;
+    width: 100%;
     height: auto;
-    padding: 5px;
-    display: inline-table;
     position: relative;
-    opacity: 0;
-    transition: all ease-in .5s;
-    transform: translateY(40px);
-    i{
-      margin: 30px;
-      margin-bottom: -15px;
-      padding: 20px;
-      color: black;
-      font-size: 50px;
-      border-radius: 8px;
-      color: rgb(60, 84, 160);
-      box-shadow: 2px 2px 2px rgb(60, 84, 160);
+    .colum-1{
+      width: 50%;
+      text-align: center;
+      img{
+        width: 120px;
+        height: auto;
+      }
     }
-    h1{
-      font-family: 'Sniglet', cursive;
-      font-size: 16px;
-      color: black;
-      padding: 5px;
-      margin-bottom: 7px;
-      margin-top: 25px;
-    }
-    p{
-      display: none;
-      font-size: 14px;
-      opacity: 0.9;
-    }
-    button{
-      margin-top: 10px;
-      border-radius: 4px;
-      width: 100px;
-      font-size: 15px;
-      padding: 5px;
-      transition: all .2s ease-in-out;
-      color: white;
-      outline: none;
-      background: linear-gradient(135deg,rgb(60, 84, 160), #7996f8);    
-      box-shadow: 1px 2px 2px rgb(60, 84, 160);
-      border: 2px solid transparent;
-      outline: none;
-      &.active{
-        background: white;
-        border: 2px solid rgb(60, 84, 160);
-        color: rgb(60, 84, 160);
+    .colum-2{
+      width: 50%;
+      h1{
+        text-align: center;
+        text-transform: uppercase;
+        color: white;
+        font-family: 'Sniglet', cursive;
+        font-size: 23px;
+        font-weight: 600;
       }
     }
   }
@@ -389,37 +344,40 @@ html, body {
     opacity: 1;
     transition: all ease-in .5s;
     position: relative;
-    background: white;
+    background: #e8edff;
     border-radius: 4px;
     .form-tag-navn{
       font-size: 15px;
-      color: rgb(60, 84, 160);
-      background: white;
+      color: rgb(48, 71, 146);
+      background: #e8edff;
       width: max-content;
       padding: 0 2px;
       position: absolute;
       left: 20px;
       top: 24px;
+      border-radius: 5px;
     }
     .form-tag-email{
       font-size: 15px;
-      color: rgb(60, 84, 160);
-      background: white;
+      color: rgb(48, 71, 146);
+      background: #e8edff;
       width: max-content;
       padding: 0 2px;
       position: absolute;
       left: 20px;
       top: 88px;
+      border-radius: 5px;
     }
     .form-tag-message{
       font-size: 15px;
-      color: rgb(60, 84, 160);
-      background: white;
+      color: rgb(48, 71, 146);
+      background: #e8edff;
       width: max-content;
       padding: 0 2px;
       position: absolute;
       left: 20px;
       top: 152px;
+      border-radius: 5px;
     }
       textarea{
         width: 100%;
