--- a/static/scss/global.css
+++ b/static/scss/global.css
@@ -11,17 +11,59 @@ body {
   background: linear-gradient(to left, #253b83, #3c54a0, #3c54a0, #637ccc);
 }
 
+#backToTop {
+  position: fixed;
+  right: 0;
+  top: 80vh;
+  z-index: 1000;
+  background: white;
+  padding: 10px;
+  border-radius: 4px;
+  -webkit-transition: .3s;
+  transition: .3s;
+  opacity: 0;
+  pointer-events: none;
+  border: 2px solid transparent;
+  background: linear-gradient(135deg, #688bfc, #7996f8);
+  border-radius: 4px;
+  padding: 10px;
+  -webkit-box-shadow: 0px 5px 2px #3c54a0;
+          box-shadow: 0px 5px 2px #3c54a0;
+  text-decoration: none;
+}
+
+#backToTop i {
+  padding-top: 5px;
+  font-size: 22px;
+  color: white;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+
+#backToTop.active {
+  opacity: 1;
+  pointer-events: visible;
+}
+
 .cover {
   width: 100%;
-  height: 65vh;
+  height: 80vh;
   background: transparent;
   padding-top: 60px;
-  text-align: center;
 }
 
 .cover .content {
-  -webkit-transform: translateY(60px);
-          transform: translateY(60px);
+  -webkit-transform: translateY(10px);
+          transform: translateY(10px);
+  opacity: 0;
+  -webkit-transition: all 1s ease-in-out;
+  transition: all 1s ease-in-out;
+}
+
+.cover .content.active {
+  opacity: 1;
+  -webkit-transform: translateY(80px);
+          transform: translateY(80px);
 }
 
 .cover .content img {
@@ -30,11 +72,58 @@ body {
 }
 
 .cover .content .text {
-  -webkit-transform: translateY(80px);
-          transform: translateY(80px);
   width: auto;
-  margin: auto;
   text-align: left;
   padding-left: 5px;
+}
+
+.cover .content .text h1 {
+  text-transform: uppercase;
+  color: white;
+  font-family: 'Sniglet', cursive;
+}
+
+.cover .content .text h1.maintext {
+  font-size: 26px;
+}
+
+.cover .content .text h1.secondtext {
+  font-size: 42px;
+  font-weight: bold;
+}
+
+.cover .content .text .cover-paragraph {
+  font-size: 16px;
+  color: white;
+  font-family: 'Sniglet', cursive;
+  opacity: 0.7;
+}
+
+.cover .content .cover-action {
+  text-align: left;
+  width: auto;
+  -webkit-transform: translateY(30px);
+          transform: translateY(30px);
+  padding-left: 5px;
+}
+
+.cover .content .cover-action a {
+  border: 2px solid transparent;
+  background: linear-gradient(135deg, #688bfc, #7996f8);
+  border-radius: 4px;
+  color: white;
+  padding: 10px;
+  -webkit-box-shadow: 0px 5px 2px #3c54a0;
+          box-shadow: 0px 5px 2px #3c54a0;
+  text-decoration: none;
+}
+
+.cover .content img {
+  width: 250px;
+  height: auto;
+  position: absolute;
+  right: 5px;
+  -webkit-transform: translateY(30px);
+          transform: translateY(30px);
 }
 /*# sourceMappingURL=global.css.map */
