--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -39,7 +39,7 @@
       <img src="{% static '/images/covers/cover-7.png' %}" alt="cover-1">
    </div>
 </div>
-<div class="services">
+<!-- <div class="services">
    <h1 class="heading">Hvorfor velge Webiser?</h1>
    <div class="service-1">
       <div class="colum-1">
@@ -49,7 +49,7 @@
          <h1>responsiv<br>design</h1>
       </div>
    </div>
-</div>
+</div> -->
 <!-- <div id="productScrollTo" class="scroll-to" style="height: 60px; width: 100%"></div>
 <div class="product-section" id="productHomePage">
    <h1 class="heading">Priser</h1>
