--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -31,51 +31,6 @@ html, body {
     box-shadow: none;
   }
 }
-.services{
-  background: transparent;
-  width: 100%;
-  height: auto;
-  position: relative;
-  transition: all ease-in .5s;
-  padding-bottom: 15px;
-  h1{
-    &.heading{
-      text-align: center;
-      width: 100%;
-      text-transform: uppercase;
-      font-family: 'Sniglet', cursive;
-      color: white;
-      font-weight: 700;
-      font-size: 26px;
-      padding-bottom: 60px;
-    }
-  }
-  .service-1{
-    display: flex;
-    width: 100%;
-    height: auto;
-    position: relative;
-    .colum-1{
-      width: 50%;
-      text-align: center;
-      img{
-        width: 120px;
-        height: auto;
-      }
-    }
-    .colum-2{
-      width: 50%;
-      h1{
-        text-align: center;
-        text-transform: uppercase;
-        color: white;
-        font-family: 'Sniglet', cursive;
-        font-size: 23px;
-        font-weight: 600;
-      }
-    }
-  }
-}
 .product-section{
   background: transparent;
   text-align: center;
@@ -84,12 +39,19 @@ html, body {
   padding: 15px;
   padding-top: 40px;
   position: relative;
-  .border{
-    background: rgb(100, 100, 100);
+  .border-up{
+    background: rgb(230, 230, 230);
     height: 2px;
     width: 65%;
-    margin: 60px auto;
-    transform: translateY(30px);
+    margin: 40px auto;
+    transform: translateY(-40px);
+  }
+  .border-down{
+    background: rgb(230, 230, 230);
+    height: 2px;
+    width: 65%;
+    margin: 80px auto;
+    transform: translateY(80px);
   }
   h1{
     &.heading{
@@ -104,15 +66,46 @@ html, body {
   .product-card{
     margin: 30px auto;
     border-radius: 5%;
-    // background: linear-gradient(135deg,rgb(60, 84, 160), #7996f8); 
-    background: transparent;   
+    background: linear-gradient(135deg,rgb(60, 84, 160), #7996f8); 
     backdrop-filter: blur(100px);   
     padding: 5px;
     opacity: 1;
     transition: all ease-in .5s;
     transform: translateY(40px);
     max-width: 320px;
-    box-shadow: 0px 0px 0px 3px white;
+    // box-shadow: 0px 0px 0px 2px white;
+    .ribbon{
+      width: 30%;
+      height: 20px;
+      position: absolute;
+      left: -15px;
+      top: 45px;
+      border-radius: 30px;
+      background: rgb(250, 250, 250);
+      border-bottom-left-radius: 0;
+      &::before{
+        content: '';
+        position: absolute;
+        top: 20px;
+        left: 0px;
+        height: 20px;
+        width: 15px;
+        background: rgb(170, 170, 170);
+        border-top-left-radius: 20px;
+        border-bottom-left-radius: 20px;
+        z-index: 2;
+      }
+      &::after{
+        content: '';
+        position: absolute;
+        top: 20px;
+        left: 0px;
+        height: 10px;
+        width: 15px;
+        background: rgb(250, 250, 250);
+        z-index: 1;
+      }
+    }
     .text{
       .product-name{
         font-size: 22px;
