--- a/static/scss/store/nav.css
+++ b/static/scss/store/nav.css
@@ -32,7 +32,7 @@
 }
 
 #navbar .hamburger {
-  padding: 15px;
+  padding: 25px;
   padding-top: 20px;
   padding-bottom: 23px;
   margin: 0;
@@ -41,8 +41,9 @@
   width: auto;
   height: auto;
   position: absolute;
-  right: 0;
+  right: 0px;
   z-index: 1000;
+  border-left: 1px solid rgba(220, 220, 220, 0.7);
 }
 
 #navbar .hamburger span {
@@ -59,9 +60,9 @@
 }
 
 #navbar .hamburger .center-span {
-  opacity: 1;
-  -webkit-transform: translateX(-6px);
-          transform: translateX(-6px);
+  opacity: 0;
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
 }
 
 #navbar .hamburger .lower-span {
@@ -151,7 +152,7 @@
   width: 100%;
   -webkit-transition: .7s;
   transition: .7s;
-  z-index: 1000;
+  z-index: 120;
   opacity: 0;
   pointer-events: none;
 }
@@ -228,17 +229,21 @@
 #navbar .my-account-icon {
   margin: 0;
   position: absolute;
-  right: 50px;
+  right: 70px;
   cursor: pointer;
-  padding: 15px;
-  padding-top: 20px;
+  padding: 25px;
+  padding-top: 12px;
   width: auto;
   height: auto;
+  border-right: 1px solid rgba(220, 220, 220, 0.7);
+  background: white;
 }
 
 #navbar .my-account-icon i {
   color: black;
   font-size: 22px;
+  -webkit-transform: translateY(8.3px);
+          transform: translateY(8.3px);
 }
 
 #navbar .my-account-icon i:active {
@@ -251,27 +256,28 @@
 #navbar .my-account-icon.click {
   background: -webkit-gradient(linear, left bottom, left top, from(#e6e6e6), color-stop(whitesmoke), to(#e6e6e6));
   background: linear-gradient(to top, #e6e6e6, whitesmoke, #e6e6e6);
+  position: fixed;
 }
 
 @-webkit-keyframes user-scale {
   0% {
-    -webkit-transform: scale(1);
-            transform: scale(1);
+    -webkit-transform: scale(1) translateY(8.3px);
+            transform: scale(1) translateY(8.3px);
   }
   100% {
-    -webkit-transform: scale(1.2);
-            transform: scale(1.2);
+    -webkit-transform: scale(1.2) translateY(8.3px);
+            transform: scale(1.2) translateY(8.3px);
   }
 }
 
 @keyframes user-scale {
   0% {
-    -webkit-transform: scale(1);
-            transform: scale(1);
+    -webkit-transform: scale(1) translateY(8.3px);
+            transform: scale(1) translateY(8.3px);
   }
   100% {
-    -webkit-transform: scale(1.2);
-            transform: scale(1.2);
+    -webkit-transform: scale(1.2) translateY(8.3px);
+            transform: scale(1.2) translateY(8.3px);
   }
 }
 
@@ -369,7 +375,7 @@
 #navbar .order {
   margin: 0;
   position: absolute;
-  right: 105px;
+  right: 145px;
   cursor: pointer;
   color: white;
   padding: 5px 8px;
