--- a/static/scss/store/nav.scss
+++ b/static/scss/store/nav.scss
@@ -29,7 +29,7 @@
     // // // MENU CSS
     // HAMBURGER CSS
     .hamburger{
-        padding: 15px;
+        padding: 25px;
         padding-top: 20px;
         padding-bottom: 23px;
         margin: 0;
@@ -37,8 +37,9 @@
         width: auto;
         height: auto;
         position: absolute;
-        right: 0;
+        right: 0px;
         z-index: 1000;
+        border-left: 1px solid rgba(220, 220, 220, 0.7);
         span{
             display: block;
             width: 20px;
@@ -50,8 +51,8 @@
             margin-bottom: 5px;
         }
         .center-span{
-            opacity: 1;
-            transform: translateX(-6px);
+            opacity: 0;
+            transform: translateX(0);
         }
         .lower-span{
             margin-top: 5px;
@@ -109,7 +110,7 @@
         right: 0px;
         width: 100%;
         transition: .7s;
-        z-index: 1000;
+        z-index: 120;
         opacity: 0;
         pointer-events: none;
         .sidebar-ul{
@@ -168,31 +169,36 @@
             pointer-events: visible;
         }
     }    
+    // // // USER CSS
     // USER ICON CSS
     .my-account-icon{
         margin: 0;
         position: absolute;
-        right: 50px;
+        right: 70px;
         cursor: pointer;
-        padding: 15px;
-        padding-top: 20px;
+        padding: 25px;
+        padding-top: 12px;
         width: auto;
         height: auto;
+        border-right: 1px solid rgba(220, 220, 220, 0.7);
+        background: white;
         i{
             color: black;
             font-size: 22px;
+            transform: translateY(8.3px);
             &:active{
                 animation-name: user-scale;
                 animation-duration: .1s;
             }
         }
         &.click{
-            background: linear-gradient(to top, rgb(230, 230, 230), rgb(245, 245, 245), rgb(230, 230, 230));  
+            background: linear-gradient(to top, rgb(230, 230, 230), rgb(245, 245, 245), rgb(230, 230, 230)); 
+            position: fixed; 
         }
         // USER CSS KEYFRAMES ANIMATION
         @keyframes user-scale {
-            0%   {transform: scale(1);}
-            100% {transform: scale(1.2);}
+            0%   {transform: scale(1) translateY(8.3px);}
+            100% {transform: scale(1.2) translateY(8.3px);}
         }
     }
     // USER LOGIN OR SIGNUP CSS
@@ -266,7 +272,7 @@
     .order{
         margin: 0;
         position: absolute;
-        right: 105px;
+        right: 145px;
         cursor: pointer;
         color: white;
         padding: 5px 8px;
