--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -56,7 +56,7 @@
    </div>
    <div class="border-down"></div>
 </div>
-<!-- <div id="proccessScrollTo" class="scroll-to" style="height: 60px; width: 100%;"></div>
+<div id="proccessScrollTo" class="scroll-to" style="height: 60px; width: 100%;"></div>
 <div class="proccess" id="info">
    <h1 class="heading">Så enkelt er det</h1>
    <div class="content">
@@ -87,7 +87,7 @@
       </div>
    </div>
    <div class="border"></div>
-</div> -->
+</div>
 
 
 <div id="contactScrollTo" class="scroll-to" style="height: 60px; width: 100%;"></div>
