--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -39,6 +39,12 @@ html, body {
   padding: 15px;
   padding-top: 40px;
   position: relative;
+  &.active{
+    .product-card{
+      opacity: 1;
+      transform: translateY(40px);
+    }
+  }
   .border-up{
     background: rgb(230, 230, 230);
     height: 2px;
@@ -69,11 +75,10 @@ html, body {
     background: linear-gradient(135deg,rgb(60, 84, 160), #7996f8); 
     backdrop-filter: blur(100px);   
     padding: 5px;
-    opacity: 1;
+    opacity: 0;
     transition: all ease-in .5s;
-    transform: translateY(40px);
+    transform: translateY(-40px);
     max-width: 320px;
-    // box-shadow: 0px 0px 0px 2px white;
     .ribbon{
       width: 30%;
       height: 20px;
@@ -127,7 +132,7 @@ html, body {
   }
 }
 .proccess{
-  background: white;
+  background: transparent;
   width: 100%;
   height: auto;
   padding: 30px;
@@ -163,7 +168,7 @@ html, body {
   }
 }
   .border{
-    background: rgb(100, 100, 100);
+    background: rgb(230, 230, 230);
     height: 2px;
     width: 65%;
     margin: 20px auto;
@@ -174,7 +179,7 @@ html, body {
       width: 100%;
       text-transform: uppercase;
       font-family: 'Sniglet', cursive;
-      color: rgb(20, 44, 120);
+      color: white;
       font-weight: 700;
       font-size: 26px;
     }
@@ -191,7 +196,7 @@ html, body {
         font-size: 20px;
         margin-bottom: 10px;
         font-family: 'Sniglet', cursive;
-        color: rgb(60, 84, 160);
+        color: white;
       }
       img{
         width: 250px;
@@ -202,8 +207,9 @@ html, body {
       p{
         margin-top: 5px;
         font-size: 15px;
+        opacity: 0.8;
         font-family: 'Sniglet', cursive;
-        opacity: 0.9;
+        color: white;
       }
     }
     .class-2{
@@ -214,7 +220,7 @@ html, body {
         font-size: 20px;
         margin-bottom: 10px;
         font-family: 'Sniglet', cursive;
-        color: rgb(60, 84, 160);
+        color: white;
       }
       img{
         width: 250px;
@@ -225,8 +231,9 @@ html, body {
       p{
         margin-top: 5px;
         font-size: 15px;
+        opacity: 0.8;
         font-family: 'Sniglet', cursive;
-        opacity: 0.9;
+        color: white;
       }
     }
     .class-3{
@@ -237,7 +244,7 @@ html, body {
         font-size: 20px;
         margin-bottom: 10px;
         font-family: 'Sniglet', cursive;
-        color: rgb(60, 84, 160);
+        color: white;
       }
       img{
         width: 250px;
@@ -248,8 +255,9 @@ html, body {
       p{
         margin-top: 5px;
         font-size: 15px;
+        opacity: 0.8;
         font-family: 'Sniglet', cursive;
-        opacity: 0.9;
+        color: white;
       }
     }
     .class-4{
@@ -260,7 +268,7 @@ html, body {
         font-size: 20px;
         margin-bottom: 10px;
         font-family: 'Sniglet', cursive;
-        color: rgb(60, 84, 160);
+        color: white;
       }
       img{
         width: 250px;
@@ -271,8 +279,9 @@ html, body {
       p{
         margin-top: 5px;
         font-size: 15px;
+        opacity: 0.8;
         font-family: 'Sniglet', cursive;
-        opacity: 0.9;
+        color: white;
       }
     }
     .class-5{
@@ -283,7 +292,7 @@ html, body {
         font-size: 20px;
         margin-bottom: 10px;
         font-family: 'Sniglet', cursive;
-        color: rgb(60, 84, 160);
+        color: white;
       }
       img{
         width: 250px;
@@ -294,8 +303,9 @@ html, body {
       p{
         margin-top: 5px;
         font-size: 15px;
-        opacity: 0.9;
+        opacity: 0.8;
         font-family: 'Sniglet', cursive;
+        color: white;
       }
     }
   }
